--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <section class="ingreso">
-            <input type="text" id="nombre" autofocus autocomplete="off" placeholder="Ingresar nombre">        
+        <form class="ingreso" id="ingreso">
+            <input type="number" id="nombre" autofocus autocomplete="off" placeholder="Ingresar nombre">        
         <button onclick="insertarNombre(event)">Agregar</button>
-        </section>
-
+        </form>
         <ul id="lista" class="lista">
             <h3>Nombres</h3>
         </ul>
