--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <form class="ingreso" id="ingreso">
-            <input type="number" id="nombre" autofocus autocomplete="off" placeholder="Ingresar nombre">        
+            <input type="text" id="nombre" autofocus autocomplete="off" placeholder="Ingresar nombre">        
         <button onclick="insertarNombre(event)">Agregar</button>
         </form>
         <ul id="lista" class="lista">
